minor UI changes

--- a/src/app/chh-web-components/chh-app-add-appointments-modal/chh-app-add-appointments-modal.page.html
+++ b/src/app/chh-web-components/chh-app-add-appointments-modal/chh-app-add-appointments-modal.page.html
@@ -200,6 +200,7 @@
                   id="btn-confirm"
                   (click)="closeModal()"
                   color="danger"
+                  fill="outline"
                 >
                   CANCEL
                 </ion-button>
