--- a/src/app/chh-web-components/chh-app-list-of-doctors/chh-app-list-of-doctors.component.html
+++ b/src/app/chh-web-components/chh-app-list-of-doctors/chh-app-list-of-doctors.component.html
@@ -1,5 +1,5 @@
 
-  <ion-card mode="ios"    class="card-margin">
+  <ion-card mode="ios"   >
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Doctors</b><br /></div>
