--- a/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
+++ b/src/app/chh-web-components/chh-app-privacy-policy/chh-app-privacy-policy.page.html
@@ -29,7 +29,7 @@
          
          
           <ion-list>
-            <ion-item style="padding-top: 10px;">
+            <ion-item style="padding-top: 10px;" class="font-size15">
               DATA PRIVACY NOTICE 
 <br /><br />
 This is to inform you of our policies regarding the collection, use, storage, disclosure, and disposal of personal information we receive from the users. 
