--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -60,7 +60,7 @@
             </h2>
           </ion-label>
         </div>
-        <ion-badge color="warning" slot="end" (click)="moreorless(false)">more..</ion-badge>
+        <ion-badge color="warning" slot="end" (click)="moreorless(false)"><ion-icon name="chevron-down-outline"></ion-icon></ion-badge>
       </ion-item>
     </ion-list>
     <ion-list *ngIf="moreOrLess == false">
@@ -109,7 +109,7 @@
           <ion-icon name="calendar-outline"></ion-icon>
           <ion-text> Admission Date : {{ dateAdmitted }}</ion-text>
         </div>
-        <ion-badge color="warning" slot="end" (click)="moreorless(true)">less..</ion-badge>
+        <ion-badge color="warning" slot="end" (click)="moreorless(true)"><ion-icon name="chevron-up-outline"></ion-icon></ion-badge>
       </ion-item>
     </ion-list>
   </div>
