--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -111,7 +111,14 @@
             </p>
             <ion-row>
               <ion-col size-lg="4" offset-lg="4">
+                <ion-grid class="ion-no-padding">
+                <ion-row>
+                <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col>
+                <ion-col size-xs="12" size-md="4" size-lg="4">
                 <chh-app-start *ngIf="!android"></chh-app-start>
+                </ion-col>
+                <ion-col size-xs="12" size-md="4" size-lg="4"></ion-col></ion-row>
+                </ion-grid>
                 <ion-button
                   id="button-lets-go"
                   *ngIf="android"
