--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -41,7 +41,8 @@
                 (click)="checkInput()"
                 color="mango"
                 disabled="{{btnDisable}}"
-              >{{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN.toUpperCase()}}
+                
+              ><div *ngIf="!btnDisable">{{this.constants.UI_COMPONENT_TEXT__VALUE__LOGIN.toUpperCase()}}</div>
                 <span *ngIf="!btnDisable"></span
                 ><ion-spinner *ngIf="btnDisable"></ion-spinner>
               </ion-button>
