minor UI changes

--- a/src/app/chh-web-components/chh-app-desktop-navigation/chh-app-desktop-navigation.component.html
+++ b/src/app/chh-web-components/chh-app-desktop-navigation/chh-app-desktop-navigation.component.html
@@ -52,6 +52,7 @@
             routerDirection="root"
             routerLinkActive="active-link"
             class="link"
+            (click)="logout()"
           >
           {{this.constants.MENU__VALUE__LOG_OUT}}
           </ion-button>
