--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -356,10 +356,20 @@
 
         <ng-template #noDataAvailable>
           <div *ngIf="!objecthandler && isFetchDone">
-            <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
-            <div class="ion-text-center">
-              <h3> {{this.messages.NO_DATA_AVAILABLE}}</h3>
-            </div>
+          <ion-grid >
+            <ion-row>
+              <ion-col size="8" offset="2">
+                <div class="vertical-center">
+                  <div class="center">
+                    <img
+                      src="assets/img/no-data-rafiki.png"
+                    
+                    />
+                  </div>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
           </div>
         </ng-template>
       </ion-col>
