--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -50,8 +50,8 @@
     </ion-row>
   </ion-grid>
   <ion-item lines="none" class="ion-no-margin"><b>Patient Details</b>
-    <ion-badge color="warning" slot="end" (click)="moreorless(true)" *ngIf="moreOrLess">more..</ion-badge>
-    <ion-badge color="warning" slot="end" (click)="moreorless(false)" *ngIf="!moreOrLess">less..</ion-badge>
+    <ion-badge color="warning" slot="end" (click)="moreorless(true)" *ngIf="moreOrLess"><ion-icon name="chevron-down-outline"></ion-icon></ion-badge>
+    <ion-badge color="warning" slot="end" (click)="moreorless(false)" *ngIf="!moreOrLess"><ion-icon name="chevron-up-outline"></ion-icon></ion-badge>
   </ion-item>
   <ion-item class="ion-no-margin" *ngIf="!moreOrLess">
     <ion-grid *ngFor="let x of data">
