--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -39,6 +39,8 @@
       </ion-fab-list>
     </ion-fab>
   </div>
+
+
   <ion-grid class="ion-no-padding chh-darkmode">
     <ion-row>
       <ion-col
@@ -46,7 +48,7 @@
         offset-md="2"
         size-lg="4"
         offset-lg="4"
-        class="custom-border-bottom ion-no-border"
+        class="custom-border-bottom ion-no-border custom-padding"
       >
         <chh-app-hospital-selector-with-all-and-filter
           (hospital)="locationAction($event)"
