--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -231,6 +231,12 @@ ______          _    _
           [forMoreOrLess]="true"
           >
         </app-chh-app-patient-header>
+
+        <ion-card mode="ios" class="shadow-remove">
+   
+            <ion-list>
+
+
             <ion-button
             color="mango"
               size="default"
@@ -239,13 +245,18 @@ ______          _    _
               (click)="redirecttoPF()"
               *ngIf="data.is_posted == 0 || data.is_posted == null"
               ><ion-icon name="checkmark-done-outline" *ngIf="checkmark"></ion-icon>Professional Fee</ion-button>
+
+</ion-list> 
+</ion-card>
+
+
               <app-chh-app-admitting-diagnosis
               [admittingDiagnosis]="admittingDiagnosis"
               [admittingDiagnosis1]="admittingDiagnosis1"
               [admittingDiagnosis2]="admittingDiagnosis2"
               [truncating1]="truncating1"
           ></app-chh-app-admitting-diagnosis>
-          <app-chh-app-card-newline *ngIf="admittingDiagnosis"></app-chh-app-card-newline>
+
             <app-chh-app-final-diagnosis
               [data]="data"
               [finalDiagnosis]="finalDiagnosis"
