--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-md="4" offset-md="4">
+      <ion-col size-md="6" offset-md="3" size-lg="4" offset-lg="4">
         <ion-card mode="ios">
           <ion-card-content>
             <div class="center">
