--- a/src/app/tab-in-patients/tab-in-patients.page.scss
+++ b/src/app/tab-in-patients/tab-in-patients.page.scss
@@ -52,3 +52,12 @@ ion-fab-button[data-desc]::after {
 .card-margin {
   margin: 10px;
 }
+
+.custom-padding{
+
+  @media only screen and (min-width: 768px ) and  (max-width: 991px){
+    padding-top:15px;
+  }
+
+
+}
