--- a/src/global.scss
+++ b/src/global.scss
@@ -67,11 +67,15 @@
   top: 5;
   position: absolute; 
   display: block;  
-  min-width: 30%;
-  max-width: 50%;
-  min-height: 25%;
-  max-height: 50%;
+
   overflow:hidden;
+
+  @media only screen and (min-width: 767px) {
+    min-width: 30%;
+    max-width: 50%;
+    height: 80%;
+  }
+
  }
 
  .my-custom-modal-inpatient-css .modal-wrapper {
