fixed welcome doki text

--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -15,7 +15,7 @@
     <ion-refresher-content ></ion-refresher-content>
   </ion-refresher>
   <ion-grid class="ion-no-padding" >
-    <ion-row >
+    <ion-row class="custom-padding">
       <ion-col size-md="8" offset-md="2" size-lg="6" offset-lg="3" class="custom-border-bottom ion-no-border ">
         <ion-item lines="none"><h2 class="ion-no-padding">Welcome, Dr. {{first_name}}!</h2></ion-item>
         
