--- a/src/app/tab-dashboard/tab-dashboard.page.scss
+++ b/src/app/tab-dashboard/tab-dashboard.page.scss
@@ -1,3 +1,13 @@
 p {
     font-size: small;
 }
+
+.custom-padding{
+
+    @media only screen and (min-width: 768px ) and  (max-width: 991px){
+      padding-top:15px;
+    }
+  
+  
+  }
+  
