updated UI for iphone NOTCH, updated the version to 1.7.4

--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -7,7 +7,7 @@
         </ion-text>
       </ion-title>
     </ion-toolbar>
-    <ion-fab horizontal="end" vertical="top" slot="fixed" *ngIf="!isDesktop">
+    <!-- <ion-fab horizontal="end" vertical="top" slot="fixed" *ngIf="!isDesktop">
       <ion-fab-button color="light" class="">
         <ion-icon name="options-outline"></ion-icon>
       </ion-fab-button>
@@ -37,7 +37,7 @@
           <ion-icon name="person-remove-outline"></ion-icon>
         </ion-fab-button>
       </ion-fab-list>
-    </ion-fab>
+    </ion-fab> -->
   </div>
 
 
