--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -39,7 +39,37 @@
       <ion-select-option value="{{this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE}}">{{this.functionsService.convertAllFirstLetterToUpperCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</ion-select-option>
     </ion-select>
   </ion-button> -->
-  
+  <ion-fab horizontal="end" vertical="top" slot="fixed" *ngIf="!isDesktop">
+    <ion-fab-button color="light" class="">
+      <ion-icon name="options-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="bottom">
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS_SELECTION__VALUE__ALL,true)"
+        data-desc= "All"
+      >
+        <ion-icon name="person-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__ADMITTED,true)"
+        data-desc="Admitted"
+      >
+        <ion-icon name="person-add-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE,true)"
+        data-desc="For Discharge"
+      >
+        <ion-icon name="person-remove-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </div>
 
 <!-- BEFORE REFACTORED -->
