updated UI on change password

--- a/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
+++ b/src/app/chh-web-components/chh-app-change-password/chh-app-change-password.page.html
@@ -97,31 +97,31 @@
                 <ion-icon  name="eye-off-outline" [name]="getName2()"item-right (click)="showPassword1()"    class="rectangle2"></ion-icon>
               </ion-item>
               <ion-list>
-                <ion-item  lines="none" class="ion-text-wrap fontSize-14" [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
+                <ion-item  lines="none" class="ion-text-wrap font-size15" [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('minlength')  ? 'text-danger' : 'text-success'">
                   <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                   frmSignup.controls['password'].hasError('minlength') ? 'close-outline' :
                   'checkmark-outline' }}"></ion-icon>
                   Must be at least 8 characters!<br />
                 </ion-item>
-                <ion-item   lines="none" class="ion-text-wrap fontSize-14"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
+                <ion-item   lines="none" class="ion-text-wrap font-size15"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasNumber')  ? 'text-danger' : 'text-success'">
                   <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                   frmSignup.controls['password'].hasError('hasNumber') ? 'close-outline' :
                   'checkmark-outline' }}"></ion-icon>
                   Must contain at least 1 number!<br />
                 </ion-item>
-                <ion-item lines="none" class="ion-text-wrap fontSize-14"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasCapitalCase')  ? 'text-danger' : 'text-success'">
+                <ion-item lines="none" class="ion-text-wrap font-size15"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasCapitalCase')  ? 'text-danger' : 'text-success'">
                   <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                   frmSignup.controls['password'].hasError('hasCapitalCase') ?  'close-outline' :
                   'checkmark-outline' }}"></ion-icon>
                   Must contain at least 1 in Capital Case!<br />
                 </ion-item>
-                <ion-item  lines="none"  class="ion-text-wrap fontSize-14"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasSmallCase')  ? 'text-danger' : 'text-success'">
+                <ion-item  lines="none"  class="ion-text-wrap font-size15"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasSmallCase')  ? 'text-danger' : 'text-success'">
                   <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                   frmSignup.controls['password'].hasError('hasSmallCase') ?   'close-outline' :
                   'checkmark-outline' }}"></ion-icon>
                   Must contain at least 1 Letter in Small Case!<br />
                 </ion-item>
-                <ion-item  class="ion-text-wrap fontSize-14"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasSpecialCharacters') ? 'text-danger' : 'text-success'">
+                <ion-item  class="ion-text-wrap font-size15"  [ngClass]="frmSignup.controls['password'].hasError('required') || frmSignup.controls['password'].hasError('hasSpecialCharacters') ? 'text-danger' : 'text-success'">
                   <ion-icon name="{{ frmSignup.controls['password'].hasError('required') ||
                   frmSignup.controls['password'].hasError('hasSpecialCharacters') ?  'close-outline' :
                   'checkmark-outline' }}"></ion-icon>
@@ -168,6 +168,7 @@
                   id="btn-confirm"
                   (click)="closeModal()"
                   color="danger"
+                  fill="outline"
                 >
                   CANCEL
                 </ion-button>
