--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -103,7 +103,7 @@
     <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >By default, PhilHealth and then Insurance (HMO) coverage applies.
+          >Insurance (HMO) and PhilHealth coverage applies.
         </ion-text>
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -113,7 +113,7 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)(+ VAT)</ion-text
+          >Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)(+ VAT)</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -126,7 +126,7 @@
     <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >By default, PhilHealth and then Insurance (HMO) coverage applies.</ion-text
+          >Insurance (HMO) and PhilHealth coverage applies.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -136,7 +136,7 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
+          >Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)
         </ion-text>
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -380,12 +380,12 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: ~P<b>{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
+          >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -398,12 +398,12 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: ~<b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
+          >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -703,7 +703,7 @@ ______          _    _
   <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==true">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >By default, PhilHealth and then Insurance (HMO) coverage applies.
+        >Insurance (HMO) and PhilHealth coverage applies.
       </ion-text>
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -713,7 +713,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)(+ VAT)</ion-text
+        >Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)(+ VAT)</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -726,7 +726,7 @@ ______          _    _
   <ul *ngIf="txtInsurancePF==false && txtInsuranceVAT==false">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >By default, PhilHealth and then Insurance (HMO) coverage applies.</ion-text
+        >Insurance (HMO) and PhilHealth coverage applies.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -736,7 +736,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
+        >Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)
       </ion-text>
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -980,12 +980,12 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: ~P<b>{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
+        >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -998,12 +998,12 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: ~<b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
+        >Receivables: <b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
