--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -179,7 +179,7 @@ ______             _     _                        _   _                   _
     </ul>
     <ul *ngIf="payvenueN == 'X' && data1 > 0">
       <li class="lineheight-80">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">By default, PhilHealth and then Insurance (HMO) coverage
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage
           applies.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
@@ -187,7 +187,7 @@ ______             _     _                        _   _                   _
           - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess
           amount)(+ VAT)</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
@@ -195,7 +195,7 @@ ______             _     _                        _   _                   _
           (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)
         </ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10">
@@ -207,16 +207,16 @@ ______             _     _                        _   _                   _
     <ul *ngIf="payvenueN == 'H' && data1 > 0">
   
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> + PhilHealth
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
         </ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10">
@@ -591,7 +591,7 @@ ______             _     _                       ______             _
           </ul>
           <ul *ngIf="payvenueN == 'X' && data1 > 0">
             <li class="lineheight-80">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">By default, PhilHealth and then Insurance (HMO) coverage
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage
                 applies.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
@@ -599,7 +599,7 @@ ______             _     _                       ______             _
                 - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess
                 amount)(+ VAT)</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
@@ -607,7 +607,7 @@ ______             _     _                       ______             _
                 (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)
               </ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10">
@@ -619,16 +619,16 @@ ______             _     _                       ______             _
           <ul *ngIf="payvenueN == 'H' && data1 > 0">
         
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> + PhilHealth
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
               </ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10">
