--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -128,15 +128,14 @@
   </ul>
   <ul *ngIf="payvenueN == 'X' && data1 > 0">
     <li class="lineheight-80">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">By default, PhilHealth and then Insurance (HMO) coverage
-        applies.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Insurance (HMO) and PhilHealth coverage applies.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Only the excess amount of <b>&#8369;{{data1 | number}}</b> (+ VAT)
         - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess
         amount)(+ VAT)</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
@@ -144,7 +143,7 @@
         (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: Insurance (HMO) + PhilHealth + &#8369;(excess amount)
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
@@ -156,16 +155,16 @@
   <ul *ngIf="payvenueN == 'H' && data1 > 0">
 
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> (+ VAT) will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'Y'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> (+ VAT) + PhilHealth</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Total amount of <b>&#8369;{{data1 | number}}</b> will be collected from your patient.</ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10" *ngIf="withVatN == 'N'">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>~&#8369;{{data1 | number}}</b> + PhilHealth
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Receivables: <b>&#8369;{{data1 | number}}</b> + PhilHealth
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
