Add storyset animated SVGs in the landing page.

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -7,8 +7,9 @@
             <!-- <app-logo></app-logo> -->
             <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital" />
             <h1><b>Welcome aboard, Dok!</b></h1>
-            <div align="center">
-              <lottie-player
+            <!-- <div align="center"> -->
+              <object data="assets/animations/world-health-day-animate.svg" width="300" height="300"> </object>
+              <!-- <lottie-player
                 src="assets/animations/21474-medical-frontliners.json"
                 mode="bounce"
                 background="transparent"
@@ -16,8 +17,8 @@
                 style="width: 300px"
                 loop
                 autoplay
-              ></lottie-player>
-            </div>
+              ></lottie-player> -->
+            <!-- </div> -->
             <h3>
               We <b>thank you</b> for your courage and service. We truly
               appreciate it!
@@ -32,7 +33,8 @@
           </ion-slide>
           <ion-slide>
             <h1>View your admitted patients.</h1>
-            <div align="center">
+            <object data="assets/animations/gynecology-consultation-animate.svg" width="300" height="300"> </object>
+            <!-- <div align="center">
               <lottie-player
                 src="assets/animations/18646-medic-clinic-chh-branding.json"
                 mode="bounce"
@@ -42,7 +44,7 @@
                 loop
                 autoplay
               ></lottie-player>
-            </div>
+            </div> -->
             <p>
               You will be notified via SMS when you have patients admitted in
               the hospital on both sites (Cebu and Mandaue).
@@ -62,7 +64,8 @@
           </ion-slide>
           <ion-slide>
             <h1>View patient appointments.</h1>
-            <div align="center">
+            <object data="assets/animations/schedule-animate.svg" width="300" height="300"> </object>
+            <!-- <div align="center">
               <lottie-player
                 src="assets/animations/11013-animation-feed-chh-branding.json"
                 mode="bounce"
@@ -72,7 +75,7 @@
                 loop
                 autoplay
               ></lottie-player>
-            </div>
+            </div> -->
             <p>
               When your patients booked an appointment schedule online, you can
               now view a list of patients that are expected to visit your
@@ -93,7 +96,8 @@
           </ion-slide>
           <ion-slide>
             <h1>Submit professional fee online.</h1>
-            <div align="center">
+            <object data="assets/animations/online-doctor-animate.svg" width="300" height="300"> </object>
+            <!-- <div align="center">
               <lottie-player
                 src="assets/animations/4774-done-chh-branding.json"
                 mode="bounce"
@@ -103,7 +107,7 @@
                 loop
                 autoplay
               ></lottie-player>
-            </div>
+            </div> -->
             <p>
               You will be notified via SMS if your patient is about to be
               discharged. Then, you can submit your professional fee using this
