Relace with non-animated SVGs.

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -7,8 +7,9 @@
             <!-- <app-logo></app-logo> -->
             <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital" />
             <h1><b>Welcome aboard, Dok!</b></h1>
+            <img src="assets/img/world-health-day-rafiki.svg" width="300" height="300" alt="frontliners" />
             <!-- <div align="center"> -->
-              <object data="assets/animations/world-health-day-animate.svg" width="300" height="300"> </object>
+              <!-- <object data="assets/img/world-health-day-rafiki.svg" width="300" height="300"> </object> -->
               <!-- <lottie-player
                 src="assets/animations/21474-medical-frontliners.json"
                 mode="bounce"
@@ -33,7 +34,8 @@
           </ion-slide>
           <ion-slide>
             <h1>View your admitted patients.</h1>
-            <object data="assets/animations/gynecology-consultation-animate.svg" width="300" height="300"> </object>
+            <img src="assets/img/vaccine-rafiki.svg" width="300" height="300" alt="admitted-patients" />
+            <!-- <object data="assets/animations/gynecology-consultation-animate.svg" width="300" height="300"> </object> -->
             <!-- <div align="center">
               <lottie-player
                 src="assets/animations/18646-medic-clinic-chh-branding.json"
@@ -64,7 +66,8 @@
           </ion-slide>
           <ion-slide>
             <h1>View patient appointments.</h1>
-            <object data="assets/animations/schedule-animate.svg" width="300" height="300"> </object>
+            <img src="assets/img/schedule-rafiki.svg" width="300" height="300" alt="view-appointments" />
+            <!-- <object data="assets/animations/schedule-animate.svg" width="300" height="300"> </object> -->
             <!-- <div align="center">
               <lottie-player
                 src="assets/animations/11013-animation-feed-chh-branding.json"
@@ -96,7 +99,8 @@
           </ion-slide>
           <ion-slide>
             <h1>Submit professional fee online.</h1>
-            <object data="assets/animations/online-doctor-animate.svg" width="300" height="300"> </object>
+            <img src="assets/img/online-doctor-rafiki.svg" width="300" height="300" alt="online-doctor" />
+            <!-- <object data="assets/animations/online-doctor-animate.svg" width="300" height="300"> </object> -->
             <!-- <div align="center">
               <lottie-player
                 src="assets/animations/4774-done-chh-branding.json"
