More SVGs and cosmetic updates.

--- a/src/app/chh-web-components/chh-app-error-404/chh-app-error-404.page.html
+++ b/src/app/chh-web-components/chh-app-error-404/chh-app-error-404.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <img src="assets/img/404.png" alt="Chong Hua Hospital">
+  <img src="assets/img/404-rafiki.svg" alt="Page not found">
 
 
 </ion-content>
