--- a/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
+++ b/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
@@ -33,8 +33,8 @@
       ></lottie-player> -->
     </div>
     <p>
-      You will be notified via SMS when you have patients admitted in the
-      hospital on both sites (Cebu and Mandaue).
+      You will be notified via SMS when you have patients admitted to the
+      hospital at both sites (Cebu and Mandaue).
     </p>
   </ion-slide>
   <ion-slide>
