--- a/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
+++ b/src/app/chh-web-components/chh-app-slides/chh-app-slides.component.html
@@ -28,8 +28,8 @@
       autoplay
     ></lottie-player>
     <p>
-      You will be notified via SMS when you have patients admitted in the
-      hospital on both sites (Cebu and Mandaue).
+      You will be notified via SMS when you have patients admitted to the
+      hospital at both sites (Cebu and Mandaue).
     </p>
   </ion-slide>
   <ion-slide>
